--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-jvectormap/core": "^1.0.4",
+    "@react-jvectormap/world": "^1.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
+    "jquery": "^3.7.1",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-circle-slider": "^1.6.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-jvectormap": "^0.0.16",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
